--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,13 +1,13 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Java CI with Maven
+name: CI checks
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+
+env:
+  NEXAPP_CORE_GOOGLE_MAPS_API_KEY: '${{ secrets.NEXAPP_CORE_GOOGLE_MAPS_API_KEY }}'
 
 jobs:
   build:
